Minor project-related changes

--- a/Tetriminify/Tetriminify.csproj
+++ b/Tetriminify/Tetriminify.csproj
@@ -65,7 +65,9 @@
     </Compile>
     <Compile Include="Generator\Block.cs" />
     <Compile Include="Generator\Direction.cs" />
+    <Compile Include="Generator\Generator.cs" />
     <Compile Include="Generator\Position.cs" />
+    <Compile Include="Generator\Tetrimino.cs" />
     <Compile Include="Generator\TetriminoHelper.cs" />
     <Compile Include="Generator\TetriminoKind.cs" />
     <Compile Include="MainWindow.xaml.cs">
