--- a/Periotris/packages.config
+++ b/Periotris/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="MathNet.Numerics.Signed" version="4.15.0" targetFramework="net461" />
+  <package id="NCDK" version="1.6.0" targetFramework="net461" />
   <package id="SharpDX" version="4.2.0" targetFramework="net461" />
   <package id="SharpDX.XInput" version="4.2.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
