--- a/SimpleTetris/SimpleTetris.csproj
+++ b/SimpleTetris/SimpleTetris.csproj
@@ -31,7 +31,7 @@
     <PublisherName>CSharperMantle</PublisherName>
     <SuiteName>CmTetris</SuiteName>
     <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <ApplicationVersion>1.0.0.0</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
