Update StartPage layout and navigation

--- a/Periotris/Periotris.csproj
+++ b/Periotris/Periotris.csproj
@@ -144,6 +144,8 @@
     <Compile Include="View\GamePage.xaml.cs">
       <DependentUpon>GamePage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\NavigationHelper.cs" />
+    <Compile Include="View\PageType.cs" />
     <Compile Include="View\StartPage.xaml.cs">
       <DependentUpon>StartPage.xaml</DependentUpon>
     </Compile>
