--- a/Periotris/packages.config
+++ b/Periotris/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
 <packages>
+  <package id="ControlzEx" version="4.4.0" targetFramework="net461" />
+  <package id="MahApps.Metro" version="2.4.4" targetFramework="net461" />
   <package id="MathNet.Numerics.Signed" version="4.15.0" targetFramework="net461" />
+  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net461" />
   <package id="NCDK" version="1.6.1" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
