--- a/Periotris/Periotris.csproj
+++ b/Periotris/Periotris.csproj
@@ -135,7 +135,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Common\TetrisConst.cs" />
-    <Compile Include="Model\HistoryData.cs" />
+    <Compile Include="Customization\HistoryData.cs" />
     <Compile Include="Model\Sorting\DependencyBuilder.cs" />
     <Compile Include="Model\Generation\Block.cs" />
     <Compile Include="Model\Direction.cs" />
@@ -236,6 +236,7 @@
   <ItemGroup>
     <Resource Include="Icon.ico" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\NCDK.1.6.1\build\NCDK.targets" Condition="Exists('..\packages\NCDK.1.6.1\build\NCDK.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
