Switch to JSON files for element data
Replace NCDK with JSON files and Newtonsoft.Json

--- a/Periotris/packages.config
+++ b/Periotris/packages.config
@@ -1,11 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <packages>
   <package id="ControlzEx" version="5.0.0" targetFramework="net461" />
-  <package id="MahApps.Metro" version="2.4.4" targetFramework="net461" />
+  <package id="MahApps.Metro" version="2.4.5" targetFramework="net461" />
   <package id="MahApps.Metro.IconPacks" version="4.8.0" targetFramework="net461" />
-  <package id="MathNet.Numerics.Signed" version="4.15.0" targetFramework="net461" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.31" targetFramework="net461" />
-  <package id="NCDK" version="1.6.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
