--- a/Periotris/packages.config
+++ b/Periotris/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <packages>
   <package id="ControlzEx" version="5.0.0" targetFramework="net461" />
+  <package id="DlxLib" version="1.3.0.0" targetFramework="net461" />
   <package id="MahApps.Metro" version="2.4.5" targetFramework="net461" />
   <package id="MahApps.Metro.IconPacks" version="4.8.0" targetFramework="net461" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.31" targetFramework="net461" />
