--- a/Periotris/Periotris.csproj
+++ b/Periotris/Periotris.csproj
@@ -33,7 +33,7 @@
     <PublisherName>CSharperMantle</PublisherName>
     <SuiteName>CmTetris</SuiteName>
     <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>1.7.3.0</ApplicationVersion>
+    <ApplicationVersion>1.7.4.0</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -221,10 +221,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="View\ElementInfo.cs" />
-    <Compile Include="View\ElementInfoManager.cs" />
+    <Compile Include="Customization\Element\ElementInfo.cs" />
+    <Compile Include="Customization\Element\ElementInfoManager.cs" />
     <Compile Include="Common\TetrisConst.cs" />
-    <Compile Include="Customization\HistoryData.cs" />
+    <Compile Include="Customization\History\History.cs" />
     <Compile Include="Model\Generation\DependencyBuilder.cs" />
     <Compile Include="Model\Direction.cs" />
     <Compile Include="Model\Generation\PatternGenerator.cs" />
